@@ -35,7 +35,7 @@ public class BounceEffectResolverTest {
         PlayerService playerService = new PlayerService();
         game = StartService.newGame(new Player(playerService.createPlayer("Player1")), new Player(playerService.createPlayer("Player2")));
         Player currentPlayer = game.getCurrentPlayer();
-        opponentPlayer = game.getOpponent().get(0);
+        opponentPlayer = game.getOpponent().getFirst();
 
         randomCard = currentPlayer.getHand().getFirst();
         randomCard.setStillTough(false);
