@@ -108,7 +108,7 @@ public class EffectQueueServiceTest {
     public void testResolveEffectQueue_emptyWithAfterEffect() throws GameStateException {
         // Add an after effect that changes the current player
         Player currentPlayer = game.getCurrentPlayer();
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(false, game);
 
@@ -147,7 +147,7 @@ public class EffectQueueServiceTest {
         otherCard.getCard().getEffects().put(EffectTiming.PLAY, Collections.singletonList(new GainEffect()));
         card.getCard().getEffects().put(EffectTiming.PLAY, Collections.singletonList(new InflictEffect()));
 
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.PLAY, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.PLAY, game.getEffectQueue());
@@ -180,7 +180,7 @@ public class EffectQueueServiceTest {
         card.getCard().getEffects().put(EffectTiming.ATTACK, new ArrayList<>(Collections.singletonList(inflictEffect)));
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.ATTACK, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(false, game);
 
@@ -217,7 +217,7 @@ public class EffectQueueServiceTest {
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(true, game);
 
@@ -256,7 +256,7 @@ public class EffectQueueServiceTest {
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
         game.getEffectQueue().setResolvingEffect(true);
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(false, game);
 
@@ -274,7 +274,7 @@ public class EffectQueueServiceTest {
     @Test
     public void testResolveEffectQueue_twoEffectsButFirstEndsGame() throws GameStateException {
         Player currentPlayer = game.getCurrentPlayer();
-        Player opponent = game.getOpponent().get(0);
+        Player opponent = game.getOpponent().getFirst();
 
         CardInstance otherCard = opponent.getHand().getFirst();
         opponent.addCardToBoard(otherCard);
@@ -297,7 +297,7 @@ public class EffectQueueServiceTest {
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(true, game);
 
@@ -316,7 +316,7 @@ public class EffectQueueServiceTest {
     @Test
     public void testResolveEffectQueue_fourEffectsWithDoubleOne() throws GameStateException {
         Player currentPlayer = game.getCurrentPlayer();
-        Player opponent = game.getOpponent().get(0);
+        Player opponent = game.getOpponent().getFirst();
 
         CardInstance otherCard = opponent.getHand().getFirst();
         opponent.addCardToBoard(otherCard);
@@ -375,7 +375,7 @@ public class EffectQueueServiceTest {
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard2, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard3, EffectTiming.DEFEATED, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         EffectQueueService.resolveEffectQueue(true, game);
 
@@ -402,7 +402,7 @@ public class EffectQueueServiceTest {
     @Test
     public void testResolveEffectQueue_twoEffectsWithDoubleOneAndChoice() throws GameStateException {
         Player currentPlayer = game.getCurrentPlayer();
-        Player opponent = game.getOpponent().get(0);
+        Player opponent = game.getOpponent().getFirst();
 
         CardInstance otherCard = opponent.getHand().getFirst();
         opponent.addCardToBoard(otherCard);
@@ -433,7 +433,7 @@ public class EffectQueueServiceTest {
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         int handSize = opponent.getHand().size();
 
@@ -462,7 +462,7 @@ public class EffectQueueServiceTest {
     @Test
     public void testResolveEffectQueue_twoEffectsWithChoice() throws GameStateException {
         Player currentPlayer = game.getCurrentPlayer();
-        Player opponent = game.getOpponent().get(0);
+        Player opponent = game.getOpponent().getFirst();
 
         CardInstance otherCard = opponent.getHand().getFirst();
         opponent.addCardToBoard(otherCard);
@@ -489,7 +489,7 @@ public class EffectQueueServiceTest {
 
         EffectQueueService.addBoardEffectsToQueue(card, EffectTiming.DEFEATED, game.getEffectQueue());
         EffectQueueService.addBoardEffectsToQueue(otherCard, EffectTiming.DEFEATED, game.getEffectQueue());
-        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().get(0)));
+        game.setAfterEffect(() -> game.setCurrentPlayer(game.getOpponent().getFirst()));
 
         int handSize = opponent.getHand().size();
 
